prover-ray/zkcdriver/testdata/synced/invalid/field_04.zkc
//error:3:9-10:expected type u32
fn f(x:𝔽) -> (r:u32) {
    r = x
    return
}
